[package]
name = "filesearch"
version = "0.1.0"
authors = ["Stephen <emmanuelstephen024@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A tool to find files and folders"
readme = "readme.md"
homepage = "https://github.com/steph-crown/filesearch"
repository = "https://github.com/steph-crown/filesearch"
keywords = ["cli", "search", "filesearch"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
globset = "0.4.18"
